完善登录与签到接口
