# bin/start.js
@@ -6,22 +6,14 @@ const Miner = require('../lib/miner/index.js');
 const Node = require('../lib/node/index.js');
 const express = require('express');
 const detect = require('detect-port');
-// const pitischain = require('../lib/pitischain');
+const CryptoUtil = require('../lib/util/cryptoUtil');
 const cors = require('cors');
-const net = require('net');
-const fs = require('fs');
 const path = require('path');
-const { error } = require('console');
+const { log } = require('console');
 // 定义数据目录路径
 const host = 'localhost';
 let peers = [];
 const dataDir = path.join(__dirname, 'data');
-
-// 获取 data 文件夹下的所有文件/文件夹
-// const subdirs = fs.readdirSync(dataDir, { withFileTypes: true });
-
-// // 找到第一个子文件夹
-// const firstSubdir = subdirs.find(dirent => dirent.isDirectory());
 
 const app = express();
 app.use(cors())
@@ -48,20 +40,40 @@ const isPortAvaliable = (port) => {
 app.post('/login', async (req, res) => {
     const { studentId, password } = req.body;
     let blockchain = new Blockchain(studentId);
-    let operator = new Operator(studentId, blockchain);
+    let blocks = blockchain.getAllBlocks();
+    let flag = 0;
+    for (const block of blocks) {
+        for (const transaction of block.transactions) {
+            if (transaction.type === "register" && transaction.studentId === studentId && CryptoUtil.hash(password) !== transaction.passwordHash) {
+                res.status(400).json({ error: '密码错误' });
+            } else if (transaction.type === "register" && transaction.studentId === studentId && CryptoUtil.hash(password) === transaction.passwordHash) {
+                flag++
+                break;
+            }
+        }
+        if (flag) break;
+    }
+    if (!flag) {
+        res.status(400).json({ error: '未找到账号' });
+    }
+    console.log(blocks, 77777);
+
     if (isNodeRunning) {
         // 如果已有节点运行，设置 peers 为上一个端口
         peers = [`http://localhost:${lastStartedPort}`];
         return res.status(400).json({ error: 'Node already running', peers });
     }
     // 查找可用端口
-    while (await isPortTaken(currentPort)) {
+    while (!isPortAvaliable(currentPort)) {
         currentPort++;
     }
-    // const node = nodeManager.getNode(studentId);
-    if (!node || node.wallet.password !== password) {
-        return res.status(403).json({ error: 'Invalid credentials' });
-    }
+    let operator = new Operator(studentId, blockchain);
+    let miner = new Miner(blockchain);
+    let node = new Node(host, currentPort, peers, blockchain);
+    let httpServer = new HttpServer(node, blockchain, operator, miner);
+    isNodeRunning = true;
+    lastStartedPort = currentPort; // 保存上一个启动的端口
+    httpServer.listen(host, currentPort);
     res.json({ status: 'success', publicKey: node.wallet.publicKey });
 });
 
@@ -76,7 +88,7 @@ app.post('/register', async (req, res) => {
     let operator = new Operator(studentId, blockchain);
     if (isNodeRunning) {
         // 如果已有节点运行，设置 peers 为上一个端口
-        peers = [{url: `http://localhost:${lastStartedPort}`}];
+        peers = [{ url: `http://localhost:${lastStartedPort}` }];
         // return res.status(400).json({ error: 'Node already running', peers });
     }
 
@@ -96,30 +108,17 @@ app.post('/register', async (req, res) => {
         if (!operator.getWallets().length) {
             let newWallet = operator.createWalletFromPassword(password);
             let newAddress = operator.generateAddressForWallet(newWallet.id);
-            let newTransaction = operator.createTransaction(newWallet.id,newAddress,'', 0, newAddress);
+            let newTransaction = operator.createRegister(newWallet.id, newAddress, '', 0, newAddress, studentId, null, Date.now(), CryptoUtil.hash(password));
             let transactionCreated = blockchain.addTransaction(Transaction.fromJson(newTransaction));
             res.status(200).json({ message: 'Node started successfully', port: currentPort, wallet: newWallet, address: newAddress, transaction: transactionCreated });
         } else {
             res.status(400).json({ error: '已注册过，请登录' });
         }
-        
+
     } catch (error) {
         console.error('Error starting node:', error);
         res.status(500).json({ error: 'Failed to start node' });
     }
-
-    // // 注册公钥到区块链
-    // const transaction = {
-    //     type: 'register',
-    //     data: {
-    //         studentId: studentId,
-    //         publicKey: wallet.publicKey
-    //     },
-    //     timestamp: new Date().toISOString()
-    // };
-    // blockchain.addTransaction(transaction);
-
-    // res.json({ status: 'success', studentId, publicKey: wallet.publicKey });
 });
 
 
