# lib/httpServer/swagger.json
@@ -487,6 +487,74 @@
                 }
             }
         },
+        "/operator/wallets/{walletId}/attendance": {
+            "post": {
+                "tags": [
+                    "operator"
+                ],
+                "summary": "Create a new attendance",
+                "description": "",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "walletId",
+                        "description": "Wallet id",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "Transaction to be created",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "required": [
+                                "password",
+                                "studentId",
+                                "eventId",
+                                "address"
+                            ],
+                            "properties": {
+                                "password": {
+                                    "type": "string",
+                                    "description": "password"
+                                },
+                                "studentId": {
+                                    "type": "string",
+                                    "description": "studentId"
+                                },
+                                "address": {
+                                    "type": "string",
+                                    "description": "address"
+                                },
+                                "eventId": {
+                                    "type": "string",
+                                    "description": "addeventIdress"
+                                }
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/Transaction"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/operator/{addressId}/balance": {
             "get": {
                 "tags": [
